# mnist

./: Cargo.toml  weights.txt
src/: main.rs
